design-mode-interview/src/main/java/org/czh/interview/design_mode_interview/interpreter_pattern/antlr/parser/CalculateParser.java
// Generated from /Users/czh/project/java/own/interview/design-mode-interview/src/main/java/org/czh/interview/design_mode_interview/interpreter_pattern/antlr/parser/Calculate.g4 by ANTLR 4.9.1
package org.czh.interview.design_mode_interview.interpreter_pattern.antlr.parser;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalculateParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, Variable = 5, Numerical = 6, SymbolAdd = 7,
            SymbolSubtract = 8, SymbolProcedureMultiply = 9, SymbolMultiply = 10, SymbolProcedureDivide = 11,
            SymbolDivide = 12, SymbolWei = 13, SymbolEquals = 14, SymbolProcedureNotEquals = 15,
            SymbolNotEquals = 16, SymbolAnd = 17, SymbolOr = 18, SymbolGreater = 19, SymbolProcedureGreaterEquals = 20,
            SymbolGreaterEquals = 21, SymbolLess = 22, SymbolProcedureLessEquals = 23, SymbolLessEquals = 24,
            SymbolNewLine = 25, SymbolBlank = 26;
    public static final int
            RULE_execute = 0, RULE_symbol = 1, RULE_conditionSymbol = 2, RULE_assignmentSymbol = 3,
            RULE_evaluationSymbol = 4, RULE_expression = 5, RULE_beEqualsExpression = 6,
            RULE_compareExpression = 7, RULE_summationExpression = 8, RULE_quadratureExpression = 9,
            RULE_minimumExpression = 10, RULE_literalExpression = 11;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public CalculateParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "execute", "symbol", "conditionSymbol", "assignmentSymbol", "evaluationSymbol",
                "expression", "beEqualsExpression", "compareExpression", "summationExpression",
                "quadratureExpression", "minimumExpression", "literalExpression"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'\u5982\u679C'", "'='", "'('", "')'", null, null, "'+'", "'-'",
                "'*'", "'\u00D7'", "'/'", "'\u00F7'", "'\u4E3A'", "'=='", "'!='", "'\u2260'",
                "'&&'", "'||'", "'>'", "'>='", "'\u2265'", "'<'", "'<='", "'\u2264'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, "Variable", "Numerical", "SymbolAdd", "SymbolSubtract",
                "SymbolProcedureMultiply", "SymbolMultiply", "SymbolProcedureDivide",
                "SymbolDivide", "SymbolWei", "SymbolEquals", "SymbolProcedureNotEquals",
                "SymbolNotEquals", "SymbolAnd", "SymbolOr", "SymbolGreater", "SymbolProcedureGreaterEquals",
                "SymbolGreaterEquals", "SymbolLess", "SymbolProcedureLessEquals", "SymbolLessEquals",
                "SymbolNewLine", "SymbolBlank"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Calculate.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ExecuteContext execute() throws RecognitionException {
        ExecuteContext _localctx = new ExecuteContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_execute);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(25);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(24);
                            symbol();
                        }
                    }
                    setState(27);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << Variable) | (1L << Numerical) | (1L << SymbolNewLine))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SymbolContext symbol() throws RecognitionException {
        SymbolContext _localctx = new SymbolContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_symbol);
        try {
            setState(33);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(29);
                    assignmentSymbol();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(30);
                    conditionSymbol();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(31);
                    evaluationSymbol();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(32);
                    match(SymbolNewLine);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConditionSymbolContext conditionSymbol() throws RecognitionException {
        ConditionSymbolContext _localctx = new ConditionSymbolContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_conditionSymbol);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(35);
                match(T__0);
                setState(36);
                expression();
                setState(37);
                symbol();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignmentSymbolContext assignmentSymbol() throws RecognitionException {
        AssignmentSymbolContext _localctx = new AssignmentSymbolContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_assignmentSymbol);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(39);
                match(Variable);
                setState(40);
                match(T__1);
                setState(41);
                expression();
                setState(42);
                match(SymbolNewLine);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final EvaluationSymbolContext evaluationSymbol() throws RecognitionException {
        EvaluationSymbolContext _localctx = new EvaluationSymbolContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_evaluationSymbol);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                expression();
                setState(45);
                match(SymbolNewLine);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_expression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(47);
                beEqualsExpression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BeEqualsExpressionContext beEqualsExpression() throws RecognitionException {
        return beEqualsExpression(0);
    }

    private BeEqualsExpressionContext beEqualsExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        BeEqualsExpressionContext _localctx = new BeEqualsExpressionContext(_ctx, _parentState);
        BeEqualsExpressionContext _prevctx = _localctx;
        int _startState = 12;
        enterRecursionRule(_localctx, 12, RULE_beEqualsExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(50);
                    compareExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(72);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(70);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                                case 1: {
                                    _localctx = new BeEqualsExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_beEqualsExpression);
                                    setState(52);
                                    if (!(precpred(_ctx, 6)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                    setState(53);
                                    match(SymbolEquals);
                                    setState(54);
                                    compareExpression(0);
                                }
                                break;
                                case 2: {
                                    _localctx = new BeEqualsExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_beEqualsExpression);
                                    setState(55);
                                    if (!(precpred(_ctx, 5)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                    setState(56);
                                    match(SymbolWei);
                                    setState(57);
                                    compareExpression(0);
                                }
                                break;
                                case 3: {
                                    _localctx = new BeEqualsExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_beEqualsExpression);
                                    setState(58);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(59);
                                    match(SymbolProcedureNotEquals);
                                    setState(60);
                                    compareExpression(0);
                                }
                                break;
                                case 4: {
                                    _localctx = new BeEqualsExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_beEqualsExpression);
                                    setState(61);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(62);
                                    match(SymbolNotEquals);
                                    setState(63);
                                    compareExpression(0);
                                }
                                break;
                                case 5: {
                                    _localctx = new BeEqualsExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_beEqualsExpression);
                                    setState(64);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(65);
                                    match(SymbolAnd);
                                    setState(66);
                                    compareExpression(0);
                                }
                                break;
                                case 6: {
                                    _localctx = new BeEqualsExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_beEqualsExpression);
                                    setState(67);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(68);
                                    match(SymbolOr);
                                    setState(69);
                                    compareExpression(0);
                                }
                                break;
                            }
                        }
                    }
                    setState(74);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final CompareExpressionContext compareExpression() throws RecognitionException {
        return compareExpression(0);
    }

    private CompareExpressionContext compareExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        CompareExpressionContext _localctx = new CompareExpressionContext(_ctx, _parentState);
        CompareExpressionContext _prevctx = _localctx;
        int _startState = 14;
        enterRecursionRule(_localctx, 14, RULE_compareExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(76);
                    summationExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(98);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(96);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                                case 1: {
                                    _localctx = new CompareExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_compareExpression);
                                    setState(78);
                                    if (!(precpred(_ctx, 6)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                    setState(79);
                                    match(SymbolLess);
                                    setState(80);
                                    summationExpression(0);
                                }
                                break;
                                case 2: {
                                    _localctx = new CompareExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_compareExpression);
                                    setState(81);
                                    if (!(precpred(_ctx, 5)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                    setState(82);
                                    match(SymbolGreater);
                                    setState(83);
                                    summationExpression(0);
                                }
                                break;
                                case 3: {
                                    _localctx = new CompareExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_compareExpression);
                                    setState(84);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(85);
                                    match(SymbolProcedureLessEquals);
                                    setState(86);
                                    summationExpression(0);
                                }
                                break;
                                case 4: {
                                    _localctx = new CompareExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_compareExpression);
                                    setState(87);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(88);
                                    match(SymbolProcedureGreaterEquals);
                                    setState(89);
                                    summationExpression(0);
                                }
                                break;
                                case 5: {
                                    _localctx = new CompareExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_compareExpression);
                                    setState(90);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(91);
                                    match(SymbolLessEquals);
                                    setState(92);
                                    summationExpression(0);
                                }
                                break;
                                case 6: {
                                    _localctx = new CompareExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_compareExpression);
                                    setState(93);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(94);
                                    match(SymbolGreaterEquals);
                                    setState(95);
                                    summationExpression(0);
                                }
                                break;
                            }
                        }
                    }
                    setState(100);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final SummationExpressionContext summationExpression() throws RecognitionException {
        return summationExpression(0);
    }

    private SummationExpressionContext summationExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        SummationExpressionContext _localctx = new SummationExpressionContext(_ctx, _parentState);
        SummationExpressionContext _prevctx = _localctx;
        int _startState = 16;
        enterRecursionRule(_localctx, 16, RULE_summationExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(102);
                    quadratureExpression(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(112);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(110);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                                case 1: {
                                    _localctx = new SummationExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_summationExpression);
                                    setState(104);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(105);
                                    match(SymbolAdd);
                                    setState(106);
                                    quadratureExpression(0);
                                }
                                break;
                                case 2: {
                                    _localctx = new SummationExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_summationExpression);
                                    setState(107);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(108);
                                    match(SymbolSubtract);
                                    setState(109);
                                    quadratureExpression(0);
                                }
                                break;
                            }
                        }
                    }
                    setState(114);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final QuadratureExpressionContext quadratureExpression() throws RecognitionException {
        return quadratureExpression(0);
    }

    private QuadratureExpressionContext quadratureExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        QuadratureExpressionContext _localctx = new QuadratureExpressionContext(_ctx, _parentState);
        QuadratureExpressionContext _prevctx = _localctx;
        int _startState = 18;
        enterRecursionRule(_localctx, 18, RULE_quadratureExpression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(116);
                    minimumExpression();
                }
                _ctx.stop = _input.LT(-1);
                setState(132);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(130);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                                case 1: {
                                    _localctx = new QuadratureExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_quadratureExpression);
                                    setState(118);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(119);
                                    match(SymbolProcedureMultiply);
                                    setState(120);
                                    minimumExpression();
                                }
                                break;
                                case 2: {
                                    _localctx = new QuadratureExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_quadratureExpression);
                                    setState(121);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(122);
                                    match(SymbolMultiply);
                                    setState(123);
                                    minimumExpression();
                                }
                                break;
                                case 3: {
                                    _localctx = new QuadratureExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_quadratureExpression);
                                    setState(124);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(125);
                                    match(SymbolProcedureDivide);
                                    setState(126);
                                    minimumExpression();
                                }
                                break;
                                case 4: {
                                    _localctx = new QuadratureExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_quadratureExpression);
                                    setState(127);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(128);
                                    match(SymbolDivide);
                                    setState(129);
                                    minimumExpression();
                                }
                                break;
                            }
                        }
                    }
                    setState(134);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final MinimumExpressionContext minimumExpression() throws RecognitionException {
        MinimumExpressionContext _localctx = new MinimumExpressionContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_minimumExpression);
        try {
            setState(140);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case Variable:
                case Numerical:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(135);
                    literalExpression();
                }
                break;
                case T__2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(136);
                    match(T__2);
                    setState(137);
                    expression();
                    setState(138);
                    match(T__3);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LiteralExpressionContext literalExpression() throws RecognitionException {
        LiteralExpressionContext _localctx = new LiteralExpressionContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_literalExpression);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                _la = _input.LA(1);
                if (!(_la == Variable || _la == Numerical)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 6:
                return beEqualsExpression_sempred((BeEqualsExpressionContext) _localctx, predIndex);
            case 7:
                return compareExpression_sempred((CompareExpressionContext) _localctx, predIndex);
            case 8:
                return summationExpression_sempred((SummationExpressionContext) _localctx, predIndex);
            case 9:
                return quadratureExpression_sempred((QuadratureExpressionContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean beEqualsExpression_sempred(BeEqualsExpressionContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 6);
            case 1:
                return precpred(_ctx, 5);
            case 2:
                return precpred(_ctx, 4);
            case 3:
                return precpred(_ctx, 3);
            case 4:
                return precpred(_ctx, 2);
            case 5:
                return precpred(_ctx, 1);
        }
        return true;
    }

    private boolean compareExpression_sempred(CompareExpressionContext _localctx, int predIndex) {
        switch (predIndex) {
            case 6:
                return precpred(_ctx, 6);
            case 7:
                return precpred(_ctx, 5);
            case 8:
                return precpred(_ctx, 4);
            case 9:
                return precpred(_ctx, 3);
            case 10:
                return precpred(_ctx, 2);
            case 11:
                return precpred(_ctx, 1);
        }
        return true;
    }

    private boolean summationExpression_sempred(SummationExpressionContext _localctx, int predIndex) {
        switch (predIndex) {
            case 12:
                return precpred(_ctx, 2);
            case 13:
                return precpred(_ctx, 1);
        }
        return true;
    }

    private boolean quadratureExpression_sempred(QuadratureExpressionContext _localctx, int predIndex) {
        switch (predIndex) {
            case 14:
                return precpred(_ctx, 4);
            case 15:
                return precpred(_ctx, 3);
            case 16:
                return precpred(_ctx, 2);
            case 17:
                return precpred(_ctx, 1);
        }
        return true;
    }

    public static class ExecuteContext extends ParserRuleContext {
        public ExecuteContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<SymbolContext> symbol() {
            return getRuleContexts(SymbolContext.class);
        }

        public SymbolContext symbol(int i) {
            return getRuleContext(SymbolContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_execute;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CalculateListener) ((CalculateListener) listener).enterExecute(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CalculateListener) ((CalculateListener) listener).exitExecute(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalculateVisitor)
                return ((CalculateVisitor<? extends T>) visitor).visitExecute(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SymbolContext extends ParserRuleContext {
        public SymbolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public AssignmentSymbolContext assignmentSymbol() {
            return getRuleContext(AssignmentSymbolContext.class, 0);
        }

        public ConditionSymbolContext conditionSymbol() {
            return getRuleContext(ConditionSymbolContext.class, 0);
        }

        public EvaluationSymbolContext evaluationSymbol() {
            return getRuleContext(EvaluationSymbolContext.class, 0);
        }

        public TerminalNode SymbolNewLine() {
            return getToken(CalculateParser.SymbolNewLine, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_symbol;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof CalculateListener) ((CalculateListener) listener).enterSymbol(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof CalculateListener) ((CalculateListener) listener).exitSymbol(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalculateVisitor) return ((CalculateVisitor<? extends T>) visitor).visitSymbol(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ConditionSymbolContext extends ParserRuleContext {
        public ConditionSymbolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public SymbolContext symbol() {
            return getRuleContext(SymbolContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_conditionSymbol;
        }
